cmake_minimum_required(VERSION 3.21)
project(Assignmet__4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignmet__4 # Assignment*
        CS112-203-2nd-S25-20210508-20210544-20210563-A4-LoginApp.cpp
        CS112-203-2nd-S25-20210508-20210544-20210563-A4-LoginFunctions.cpp
        CS112-203-2nd-S25-20210508-20210544-20210563-A4-LoginFunctions.h)
